--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
 		/>
 		<title>Andrew's Portfolio</title>
 		<link rel="stylesheet" href="style.css" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&display=swap"
+			rel="stylesheet"
+		/>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
@@ -22,7 +27,6 @@
 			/>
 		</div>
 		<div id="parallax"></div>
-
 		<div id="root"></div>
 		<!--
       This HTML file is a template.
