--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
 			href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Quantico&display=swap"
+			rel="stylesheet"
+		/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
 	<body>
