made responsive: cloud background cover, no scroll bar, text spacing, filter buttons thinner, projects thinner, github button bigger, youtube container has padding,

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 				src="./images/360_F_289616456_wwOUZZTsYTOcIxGbwffOS8iP4QatFHa1.jpg"
 				class="stretch"
 				alt=""
+				id="bg_clouds"
 			/>
 		</div>
 		<div id="parallax"></div>
@@ -56,7 +57,7 @@
 			window.onload = function () {
 				Calendly.initBadgeWidget({
 					url: "https://calendly.com/andrewcbuensalida/chat-with-andrew",
-					text: "Schedule time with me",
+					text: "Schedule a call",
 					color: "#0069ff",
 					textColor: "#ffffff",
 					branding: false,
