--- a/public/index.html
+++ b/public/index.html
@@ -22,18 +22,19 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
 	<body>
-		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="background">
-			<img
-				src="./images/360_F_289616456_wwOUZZTsYTOcIxGbwffOS8iP4QatFHa1.jpg"
-				class="stretch"
-				alt=""
-				id="bg_clouds"
-			/>
-		</div>
-		<div id="parallax"></div>
-		<div id="root"></div>
-		<!--
+		<div id="noOverFlow">
+			<noscript>You need to enable JavaScript to run this app.</noscript>
+			<div id="background">
+				<img
+					src="./images/360_F_289616456_wwOUZZTsYTOcIxGbwffOS8iP4QatFHa1.jpg"
+					class="stretch"
+					alt=""
+					id="bg_clouds"
+				/>
+			</div>
+			<div id="parallax"></div>
+			<div id="root"></div>
+			<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -43,27 +44,28 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-		<!-- Calendly badge widget begin -->
-		<link
-			href="https://assets.calendly.com/assets/external/widget.css"
-			rel="stylesheet"
-		/>
-		<script
-			src="https://assets.calendly.com/assets/external/widget.js"
-			type="text/javascript"
-			async
-		></script>
-		<script type="text/javascript">
-			window.onload = function () {
-				Calendly.initBadgeWidget({
-					url: "https://calendly.com/andrewcbuensalida/chat-with-andrew",
-					text: "Schedule a call",
-					color: "#0069ff",
-					textColor: "#ffffff",
-					branding: false,
-				});
-			};
-		</script>
-		<!-- Calendly badge widget end -->
+			<!-- Calendly badge widget begin -->
+			<link
+				href="https://assets.calendly.com/assets/external/widget.css"
+				rel="stylesheet"
+			/>
+			<script
+				src="https://assets.calendly.com/assets/external/widget.js"
+				type="text/javascript"
+				async
+			></script>
+			<script type="text/javascript">
+				window.onload = function () {
+					Calendly.initBadgeWidget({
+						url: "https://calendly.com/andrewcbuensalida/chat-with-andrew",
+						text: "Schedule a call",
+						color: "#0069ff",
+						textColor: "#ffffff",
+						branding: false,
+					});
+				};
+			</script>
+			<!-- Calendly badge widget end -->
+		</div>
 	</body>
 </html>
