--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+      -->
 			<!-- Calendly badge widget begin -->
 			<link
 				href="https://assets.calendly.com/assets/external/widget.css"
@@ -67,5 +67,14 @@
 			</script>
 			<!-- Calendly badge widget end -->
 		</div>
+		<div class="chat-popup"></div>
+		<link
+			href="./static/css/main.e81f1cb1.css"
+			rel="stylesheet"
+		/>
+		<script
+			src="./static/js/main.096dc34d.js"
+			type="text/javascript"
+		></script>
 	</body>
 </html>
